--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <Title>Coa I said I would and I keep promises</Title>
+        <Title>Coa I keep promises</Title> 
+        <link rel="icon" type="image/gif" sizes="16x16" href="/img/favicon.gif">
         <link rel="stylesheet" href="CSS/Style.css">
+        
     </head>
 
     <body> 
