Lore drop woooooo

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         <main>
 
             <section>
-                <h1>Coa's Child Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael</h1>
-                <p>On the 16th of October 2025 at the time of 18:38 UTC+0. The child of Coa was named as Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael</p>
+                <h1 style="text-align: center;" >Coa's Crow Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael</h1>
+                <p style="text-align: center;">On the 16th of October 2025 at the time of 18:38 UTC+0. The Crow of Coa was named as Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael</p>
             </section>
 
-            <crow><img src="img\image_20251016_141206_967.jpg" alt="A fluffy crow plushie with cute beady eyes and asmall wollen looking beak"></crow>
+            <crow><img title="Caw" src="img\image_20251016_141206_967.jpg" alt="A fluffy crow plushie with cute beady eyes and asmall wollen looking beak" style="width: 50%; display: block; margin-left: auto; margin-right: auto;"></crow>
 
             <section>
-                <p>Lore of Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael, etc. etc.</p>
+                <h2 title="The beninninging" style="text-align: center;">The Beginning of Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael's Tale</h2>
+                <p style="text-align: center;">Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael was born upon the spire to heaven in which he was bestowed divine purpose by the eldritch being he hath spawned from his</p>
+                <p style="text-align: center;">Sir Licorice the 3rd Disciple of Greg Andrew Cawmichael's early beginning was full of equivilent parts fun and learning until the age of 8 whene he was introduced to his prescribed mentor Greg Andrew Cawmichael</p>
             </section>
 
         </main>
